tests/ui/binop/binop-bitxor-str.rs
//@error-in-other-file:no implementation for `String ^ String`

fn main() { let x = "a".to_string() ^ "b".to_string(); }
